--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header{
     padding: 1rem 4%;
 }
 header .logo{
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bolder;
     color: #3D5AFF;
     text-transform: uppercase;
@@ -46,7 +46,7 @@ header .logo span{
 }
 header .navbar a{
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin: 0.8rem;
 }
 header .navbar a:hover{
@@ -84,7 +84,7 @@ header .navbar a:hover{
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 70%;
   width: auto;
   padding: 16px;
   margin-top: -22px;
@@ -109,12 +109,18 @@ header .navbar a:hover{
 
 /* Caption text */
 .text {
-  color: white;
+  /* color: white;
   position: absolute;
   top: 8rem;
   left: 15rem;
   width: 60%;
-  text-align: center;
+  text-align: center; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: -20rem;
+  color: white;
 }
 .text_head{
     font-family: 'Work Sans', sans-serif;
@@ -172,7 +178,7 @@ header .navbar a:hover{
 .indicators{
 	position: absolute;
     left: 50%;
-    bottom: 20px;
+    bottom: -60px;
     transform: translate(-50%);
     }
 .dot {
@@ -194,14 +200,20 @@ header .navbar a:hover{
 
 
 /* ==================media css========================== */
+@media(max-width:1200px){
+
+
+
+}
+
+
 @media (max-width: 820px) {
 
 
     /* slider */
-    .text{
-        top: 170px;
-        left: 165px;
-    }
+    /* .text{ */
+        /* top: 170px;
+        left: 165px; }*/
     .text_head{
         font-size: 35px;
     }
@@ -225,9 +237,10 @@ header .navbar a:hover{
 
     /* slider */
     .text{
-        top: 65px;
+        /* top: 65px;
         left: 5px;
-        width: 100%;
+        width: 100%; */
+        margin-top: -15rem;
     }
     .text_head{
         font-size: 30px;
@@ -271,6 +284,7 @@ header .navbar a:hover{
         font-size: 1rem;
 
     }
+    
 
 }
 
@@ -279,39 +293,30 @@ header .navbar a:hover{
 
 /* team-profile */
 
-.team-profile-header{
+.team-profile-header {
     color: black;
-    font-size: 30px;
-    font-weight: bold;
+    font-size: 40px;
     padding: 2rem;
     background: #fff;
+    margin-top: 7rem;
+    font-weight: bolder;
 }
-/* team-profile */
-
-.team-profile-header{
-    color: black;
-    font-size: 30px;
-    font-weight: bold;
-    padding: 2rem;
-    background: #fff;
-}
-
 .team-profile-container {
-    background: #fff;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+    /* background: #fff; */
+    /* border: 1px solid #ccc; */
+    /* border-radius: 3px; */
     padding: 3rem;
     margin : 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
 .team-member {
     background-color: black;
     margin: 0 2rem;
-    padding: 0 4rem 4rem;
+    padding: 0 3rem 1rem;
     border-radius: 0.8rem;
 }
 
@@ -320,7 +325,7 @@ header .navbar a:hover{
     border-radius: 50%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transform: translateY(-30px) translateX(+50px);
-    border: black 5px solid;
+    border: black 0.2rem solid;
 }
 
 .team-member-name {
@@ -336,4 +341,19 @@ header .navbar a:hover{
 .team-member-name .team-member-role p,p{
     text-align: center;
     color: #F5F5F5;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+}
+
+.fa-brands ,.fa-circle-info {
+    color: #F5F5F5;
+    padding: 0 0.3rem 0 0.3rem;
+}
+.fa-icons{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 1.4rem;
 }
