--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 body{
     background-color: #F5F5F5;
+    margin-bottom: 20px;
 }
 *{
     font-family: 'Manrope', sans-serif;
@@ -36,7 +37,7 @@ header{
     padding: 1rem 4%;
 }
 header .logo{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bolder;
     color: #3D5AFF;
     text-transform: uppercase;
@@ -46,7 +47,7 @@ header .logo span{
 }
 header .navbar a{
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin: 0.8rem;
 }
 header .navbar a:hover{
@@ -109,12 +110,6 @@ header .navbar a:hover{
 
 /* Caption text */
 .text {
-  /* color: white;
-  position: absolute;
-  top: 8rem;
-  left: 15rem;
-  width: 60%;
-  text-align: center; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -172,7 +167,6 @@ header .navbar a:hover{
     color: black;
 }
 
-
 /* The dots/bullets/indicators */
 
 .indicators{
@@ -195,22 +189,104 @@ header .navbar a:hover{
 .active, .dot:hover {
   background-color: #717171;
 }
+.seperater, .seperater2{
+    width: 80%;
+    height: 5px;
+    background: linear-gradient(0.25turn, #3D5AFF, #F6A426);
+    margin-top: 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10%;
+    border-radius: 10px;
+}
+.seperater2{
+    margin-top: 2rem;
+
+}
+
+/*============================================= team-profile================================================= */
+.team_profile_header{
+    color: black;
+    font-size: 40px;
+    padding: 2rem;
+    font-weight: bolder;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.team_profile_header span{
+    color: #F6A426;
+}
+.team_membes{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    
+
+    
+}
+.team_member_details{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 10px;
+}
+.profile_img{
+    margin-bottom: -60px;
+    z-index: 2;
+}
+.profile_img img{
+    border: 3px solid black;
+    border-radius: 50%;
+    width: 100px;
+
+}
+.details_con{
+    margin-top: .8rem;
+    background-color: black;
+    width: 15rem;
+    height: 12rem;
+    border-radius: 10px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;  
+}
+.details_con p{
+    margin-top: 10px;
+}
+.team_icons{
+    font-size: 25px;
+    margin-top: 10px;
+}
+.fa-brands ,.fa-circle-info {
+    color: #F5F5F5;
+    padding: 0 0.3rem 0 0.3rem;
+}
+.fa-icons{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 1.4rem;
+}
+
 
 
 
 
 /* ==================media css========================== */
-@media(max-width:1200px){
-
-
-
-}
-
 
 @media (max-width: 820px) {
 
 
-    
+    .seperater{
+        margin-top: 11rem;
+    }
     .text_head{
         font-size: 35px;
     }
@@ -231,6 +307,9 @@ header .navbar a:hover{
 }
 
 @media (max-width: 450px) {
+    .seperater{
+        margin-top: 6rem;
+    }
 
     /* slider */
     .text{
@@ -282,75 +361,13 @@ header .navbar a:hover{
 
     }
     
+    /* team profile */
+    .team_profile_header{
+        font-size: 25px;
+    }
+    .team_membes{
+        gap: 0;
+    }
 
 }
 
-
-/*============================================= profile================================================= */
-
-/* team-profile */
-
-.team-profile-header {
-    color: black;
-    font-size: 40px;
-    padding: 2rem;
-    background: #fff;
-    margin-top: 7rem;
-    font-weight: bolder;
-}
-.team-profile-container {
-    /* background: #fff; */
-    /* border: 1px solid #ccc; */
-    /* border-radius: 3px; */
-    padding: 3rem;
-    margin : 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
-}
-
-.team-member {
-    background-color: black;
-    margin: 0 2rem;
-    padding: 0 3rem 1rem;
-    border-radius: 0.8rem;
-}
-
-.team-member img {
-    width: 50%;
-    border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transform: translateY(-30px) translateX(+50px);
-    border: black 0.2rem solid;
-}
-
-.team-member-name {
-    font-size: 1.5rem;
-    font-weight: 750;
-}
-
-.team-member-role {
-    font-size: 1rem;
-    font-weight: 500;
-}
-
-.team-member-name .team-member-role p,p{
-    text-align: center;
-    color: #F5F5F5;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-}
-
-.fa-brands ,.fa-circle-info {
-    color: #F5F5F5;
-    padding: 0 0.3rem 0 0.3rem;
-}
-.fa-icons{
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    font-size: 1.4rem;
-}
