--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap');
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    background-color: #F5F5F5;
-    margin-bottom: 20px;
-}
 *{
     font-family: 'Manrope', sans-serif;
     margin: 0;padding: 0;
@@ -18,6 +7,10 @@ body{
     border: none;
     text-decoration: none;
     transition: all .2s linear;
+}
+body{
+    background-color: #F5F5F5;
+    margin-bottom: 20px;
 }
 
 .heading{
@@ -35,26 +28,27 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 1rem 4%;
+    
 }
 header .logo{
     font-size: 1.5rem;
     font-weight: bolder;
     color: #3D5AFF;
     text-transform: uppercase;
+    text-decoration: none;
 }
 header .logo span{
     color: white;
 }
-header .navbar a{
+header .navbar1 a{
     color: #fff;
     font-size: 1.2rem;
     margin: 0.8rem;
+    text-decoration: none;
 }
-header .navbar a:hover{
+header .navbar1 a:hover{
     color: #3D5AFF;
 }
-
-
 #menu-bar{
     color: #fff;
     font-size: 3rem;
@@ -62,8 +56,6 @@ header .navbar a:hover{
     cursor: pointer;
     display: none;
 }
-
-
 /* slider */
 
 .mySlides {display: none}
@@ -80,7 +72,9 @@ header .navbar a:hover{
 .fade{
     transition: 0.6s;
 }
-
+.fade:not(.show) {
+    opacity: 1;
+}
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -95,12 +89,14 @@ header .navbar a:hover{
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  text-decoration: none;
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
+  
 }
 
 /* On hover, add a black background color with a little bit see-through */
@@ -203,8 +199,7 @@ header .navbar a:hover{
 .seperater2{
     margin-top: 2rem;
 
-}
-
+}   
 /*============================================= team-profile================================================= */
 .team_profile_header{
     color: black;
@@ -224,8 +219,7 @@ header .navbar a:hover{
     justify-content: center;
     flex-wrap: wrap;
     gap: 1.5rem;
-    
-
+    margin-top: -10px;
     
 }
 .team_member_details{
@@ -249,7 +243,7 @@ header .navbar a:hover{
     margin-top: .8rem;
     background-color: black;
     width: 15rem;
-    height: 12rem;
+    height: 14rem;
     border-radius: 10px;
     color: white;
     display: flex;
@@ -257,9 +251,14 @@ header .navbar a:hover{
     justify-content: center;
     flex-direction: column;  
 }
-.details_con p{
-    margin-top: 10px;
+.details_con h1{
+    margin-top: 1rem;
+    font-size: 25px;    
 }
+.details_con p{
+    margin-top: 0px;
+}
+
 .team_icons{
     font-size: 25px;
     margin-top: 10px;
@@ -274,8 +273,6 @@ header .navbar a:hover{
     align-items: center;
     font-size: 1.4rem;
 }
-
-
 
 
 
@@ -299,7 +296,7 @@ header .navbar a:hover{
     header .logo{
         font-size: 1.5rem;
     }
-    header .navbar a {
+    header .navbar1 a {
         font-size: 1rem;
 
     }
@@ -338,7 +335,7 @@ header .navbar a:hover{
         font-size: 1.5rem;
     }
 
-    header .navbar {
+    header .navbar1 {
         position: absolute;
         top: 100%;right: 0;left: 0;
         background: black;
@@ -346,12 +343,12 @@ header .navbar a:hover{
         padding: .1rem 2rem;
         clip-path: polygon(0 0,100% 0,100% 0,0 0);
     }
-    header .navbar.active{
+    header .navbar1.active{
         clip-path: polygon(0 0,100% 0,100% 100%,0 100%);
     }
 
 
-    header .navbar a {
+    header .navbar1 a {
         display: block;
         border-radius: .5rem;
         padding: 0.8rem;
