--- a/style.css
+++ b/style.css
@@ -1,24 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap');
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body{
     background-color: #F5F5F5;
 }
 
 *{
     font-family: 'Manrope', sans-serif;
-    margin: 0;padding: 0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     text-transform: capitalize;
     outline: none;
     border: none;
     text-decoration: none;
-    transition: all .2s linear;
+    /* transition: all .2s linear; */
 }
 
 .heading{
