--- a/style.css
+++ b/style.css
@@ -422,19 +422,18 @@ header .navbar1 a:hover {
   opacity: 0.7;
 }
 
-
 /* abouot us */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 
-:root{
-    --blue:#16a085;
-    --black:#444;
-	--blue:#0000FF;
-    --light-color:#777;
-    --box-shadow:.5rem .5rem 0 rgba(22, 160, 133, .2);
-    --text-shadow:.4rem .4rem 0 rgba(0, 0, 0, .2);
-    --border:.2rem solid var(--blue);
+:root {
+  --blue: #16a085;
+  --black: #444;
+  --blue: #0000ff;
+  --light-color: #777;
+  --box-shadow: 0.5rem 0.5rem 0 rgba(22, 160, 133, 0.2);
+  --text-shadow: 0.4rem 0.4rem 0 rgba(0, 0, 0, 0.2);
+  --border: 0.2rem solid var(--blue);
 }
 
 /* *{
@@ -454,98 +453,138 @@ html{
     scroll-behavior: smooth;
 } */
 
-.about{
-    padding:2rem 9%;
+.about {
+  padding: 2rem 9%;
 }
 
-.about:nth-child(even){
-    background: #f5f5f5;
+.about:nth-child(even) {
+  background: #f5f5f5;
 }
 
-.heading{
+.heading {
   text-align: center;
   padding-bottom: 2rem;
   text-shadow: none;
   text-transform: uppercase;
-  color:var(--blue);
+  color: var(--blue);
   font-size: 5rem;
-  letter-spacing: .4rem;
+  letter-spacing: 0.4rem;
 }
 
-.heading span{
-    text-transform: uppercase;
-    color:var(--blue);
+.heading span {
+  text-transform: uppercase;
+  color: var(--blue);
 }
-.btn .aboutus_btn, .contactus_btn{
-    text-decoration: none;
-    color: #3D5AFF;
-    background-color: white;
-    padding: 15px;
-    border: 2px solid #3D5AFF;
-    border-radius: 53px;
-    width: 150px;
-    height: 60px;
-    align-items: center;
-    display: inline-block;
-    justify-content: center;
-    font-weight: bold;
-
+.btn .aboutus_btn,
+.contactus_btn {
+  text-decoration: none;
+  color: #3d5aff;
+  background-color: white;
+  padding: 15px;
+  border: 2px solid #3d5aff;
+  border-radius: 53px;
+  width: 150px;
+  height: 60px;
+  align-items: center;
+  display: inline-block;
+  justify-content: center;
+  font-weight: bold;
 }
-.btn .contactus_btn{
-    color: #3D5AFF;
-    background: transparent;
+.btn .contactus_btn {
+  color: #3d5aff;
+  background: transparent;
 }
-.btn .aboutus_btn,.contactus_btn{
-    width: 130px;
-    height: 50px;
-    font-size: 15px;
+.btn .aboutus_btn,
+.contactus_btn {
+  width: 130px;
+  height: 50px;
+  font-size: 15px;
 }
-.btn .aboutus_btn:hover{
-    background-color: #3D5AFF;
-    color: black;
+.btn .aboutus_btn:hover {
+  background-color: #3d5aff;
+  color: black;
 }
-.btn .contactus_btn:hover{
-    background-color: #3D5AFF;
-    color: black;
+.btn .contactus_btn:hover {
+  background-color: #3d5aff;
+  color: black;
 }
-.about .row{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap:2rem;
-}
-
-.about .row .image{
-    flex:1 1 45rem;
+.about .row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
 }
 
-.about .row .image img{
-    width: 100%;
+.about .row .image {
+  flex: 1 1 45rem;
 }
 
-.about .row .content{
-    flex:1 1 45rem;
+.about .row .image img {
+  width: 100%;
 }
 
-.about .row .content h3{
-    color: var(--black);
-    text-shadow: var(--text-shadow);
-    font-size: 4rem;
-    line-height: 1.8;
+.about .row .content {
+  flex: 1 1 45rem;
 }
 
-.about .row .content p{
-    color: var(--black);
-    padding:1rem 0;
-    font-size: 15px;
-    line-height: 1.8;
-}
-.about .row .content p span{
-    color: blue;
-}
-.about .row .content p span text{
-    color: --blue;
+.about .row .content h3 {
+  color: var(--black);
+  text-shadow: var(--text-shadow);
+  font-size: 4rem;
+  line-height: 1.8;
 }
 
+.about .row .content p {
+  color: var(--black);
+  padding: 1rem 0;
+  font-size: 15px;
+  line-height: 1.8;
+}
+.about .row .content p span {
+  color: blue;
+}
+.about .row .content p span text {
+  color: --blue;
+}
 
+/* services
 
+.service_head {
+  font-size: 40px;
+}
+.theme-text {
+  color: #f6a426;
+}
+
+.card-img-top {
+  height: 200px;
+  width: 100%;
+}
+.card {
+  z-index: 1;
+  overflow: hidden;
+  transition: 0.5s;
+}
+.card:hover {
+  color: white;
+}
+.card::before {
+  content: "";
+  position: absolute;
+  left: -100%;
+  top: 0%;
+  background: black;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+  z-index: -1;
+}
+.card:hover::before {
+  left: 0%;
+  color: white;
+}
+.container-fluid {
+  background-image: url("blob-scene-haikei.svg");
+  background-position: center;
+  background-size: cover;
+} */
