--- a/style.css
+++ b/style.css
@@ -368,3 +368,105 @@ header .navbar1 a:hover{
 
 }
 
+/* ==================aboutUs css========================== */
+
+
+*{
+    padding: 0;
+    margin: 0;
+    font-family: 'Manrope',sans-serif;
+    box-sizing: border-box;
+}
+.about{
+    width: 100%;
+    padding: 78px 0px;
+    background-color: #191919;
+}
+.heading {
+    text-align: center;
+    font-size: 3.5rem;
+    padding: 1rem;
+    color: black
+}
+
+.heading span {
+    color: rgb(240, 151, 69);
+}
+
+.about img{
+    height: 500px;
+    width: 500px;
+}
+.about .about-text{
+    width: 550px;
+}
+.about-text p {
+    color: white;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 1rem;
+    position:relative;
+    
+    margin-bottom: 45px;
+}
+.main{
+    background-color: #191919;
+    width: 1130px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.about-text text{
+    color: white;
+    font-size: 8vw;   //80px
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+.about-text h5{
+    color: white;
+    font-size: 25px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+    letter-spacing: 2px;
+}
+.slider_btn{
+    
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.aboutus_btn, .contactus_btn{
+    text-decoration: none;
+    color: black;
+    background-color: #3D5AFF;
+    padding: 15px;
+    border: 2px solid #3D5AFF;
+    border-radius: 53px;
+    width: 150px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+
+}
+.contactus_btn{
+    margin-left: 20px;
+    color: #3D5AFF;
+    background: transparent;
+}
+.aboutus_btn:hover{
+    background: transparent;
+    cursor: pointer;
+    color: #3D5AFF;
+}
+.contactus_btn:hover{
+    background-color: #3D5AFF;
+    color: black;
+}
+
+
