--- a/style.css
+++ b/style.css
@@ -1060,7 +1060,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: url(../images/footer.png) center center no-repeat;
+  background: url(images/footer.png) center center no-repeat;
   background-size: contain;
   background-color: black;
   margin-bottom: -20px;
